[package]
name = "password_generator_strength_analyzer_tool"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "password-tool"
path = "src/main.rs"

[dependencies]
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
